parser/sample_tests/ours/control.txt

*** Error line 5.
  a = 0;
    ^
*** syntax error

